# viewepvp

./: .gitignore  Cargo.toml  LICENSE  database.db
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260221_225946_tb_player.rs  m20260221_230000_tb_line.rs  m20260221_230100_tb_line_player.rs  m20260221_230104_tb_confrontation.rs  m20260221_230200_tb_confrontation.rs  m20260221_231004_tb_line.rs  m20260302_212912_tb_user.rs  m20260302_213032_tb_group.rs  m20260302_215142_add_group_tb_line.rs  m20260302_220419_add_group_tb_player.rs  m20260302_223728_add_group_tb_confrontation.rs  m20260302_232438_tb_user.rs  m20260303_080705_add_column_email_tb_user.rs  m20260304_225934_remove_group_id_tb_user.rs  m20260304_232341_tb_role.rs  m20260304_232444_tb_group_user.rs  m20260312_182244_tb_permissions.rs  m20260312_182335_tb_role_permissions.rs
src/: main.rs
src/dto/: confrontation_dto.rs  group_dto.rs  line_dto.rs  login_dto.rs  mod.rs  player_dto.rs  role_dto.rs  user_dto.rs  user_relations.rs
src/handlers/: authentication.rs  groups.rs  mod.rs
src/models/: confrontation.rs  custom_erros.rs  jwt_structs.rs  line.rs  line_player.rs  mod.rs  player.rs  prelude.rs  tb_confrontation.rs  tb_group.rs  tb_group_user.rs  tb_line.rs  tb_line_player.rs  tb_permissions.rs  tb_player.rs  tb_role.rs  tb_role_permissions.rs  tb_user.rs
src/router/: auth_router.rs  confrontation_router.rs  groups_router.rs  line_router.rs  mod.rs  player_router.rs
src/services/: authentication_server.rs  autorization_server.rs  confrontation_service.rs  mod.rs  (+6 more)
