[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
actix-cors = "0.7.1"
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.19.0"
rand = "0.10.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
dotenv = "0.15.0"
